Thu Jul 31 01:33:17 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/mvm.h (rb_thread_lock_t): needed for inter-VM lock.

	* io.c (max_file_descriptor_lock): should be initialized.

	* pack.c (pack_unpack): lock for MVM.

Thu Jul 31 01:25:43 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_mutex_unlock_all): mutex is no longer a ruby object.

Thu Jul 31 01:11:58 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (ruby_vm_specific_ptr): fix for reallocation.

Thu Jul 31 00:58:33 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* pack.c (pack_unpack): reduced static variables.

Thu Jul 31 00:10:20 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* proc.c (rb_proc_call_with_block): prevent null reference.

Wed Jul 30 22:19:13 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* parse.y (vtable_free): remove meaningless null check.

Wed Jul 30 22:08:25 2008  Tanaka Akira  <akr@fsij.org>

	* dir.c (struct dir_data): change path field char * to VALUE.
	  (mark_dir): new function for mark path field.
	  (free_dir): follow the path field change.
	  (dir_s_alloc): ditto.
	  (dir_initialize): ditto.
	  (dir_s_open): ditto.
	  (dir_inspect): ditto.
	  (dir_path): return (duplicate of) the path field to preserve
	  encoding.  [ruby-dev:35685]

Wed Jul 30 22:06:56 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* string.c (sym_inspect): remove dead code.

Wed Jul 30 21:32:52 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* ChangeLog: fix wrong method name and add reference.

Wed Jul 30 21:30:08 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* regparse.c (name_add): fix memory leak.

Wed Jul 30 21:08:06 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* regparse.c (parse_exp): fix memory leak at Regexp.new("x{1,1}").

Wed Jul 30 17:48:15 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_w32_select): recalc the rest of timeout for each
	  iterations.  [ruby-core:18015]

Tue Jul 29 23:37:37 2008  Yusuke Endoh  <mame@tsg.ne.jp>
